--- a/crds/grafana-operator/v5.9.2.grafana.integreatly.org_grafanafolders.yaml
+++ b/crds/grafana-operator/v5.9.2.grafana.integreatly.org_grafanafolders.yaml
@@ -48,17 +48,22 @@ spec:
                           items:
                             type: string
                           type: array
+                          x-kubernetes-list-type: atomic
                       required:
                       - key
                       - operator
                       type: object
                     type: array
+                    x-kubernetes-list-type: atomic
                   matchLabels:
                     additionalProperties:
                       type: string
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               permissions:
                 type: string
               resyncPeriod:
