--- a/crds/grafana-operator/v5.9.2.grafana.integreatly.org_grafanaalertrulegroups.yaml
+++ b/crds/grafana-operator/v5.9.2.grafana.integreatly.org_grafanaalertrulegroups.yaml
@@ -45,17 +45,22 @@ spec:
                           items:
                             type: string
                           type: array
+                          x-kubernetes-list-type: atomic
                       required:
                       - key
                       - operator
                       type: object
                     type: array
+                    x-kubernetes-list-type: atomic
                   matchLabels:
                     additionalProperties:
                       type: string
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               interval:
                 format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
@@ -101,6 +106,7 @@ spec:
                       - OK
                       - Alerting
                       - Error
+                      - KeepLast
                       type: string
                     for:
                       format: duration
@@ -117,7 +123,29 @@ spec:
                       - Alerting
                       - NoData
                       - OK
+                      - KeepLast
                       type: string
+                    notificationSettings:
+                      properties:
+                        group_by:
+                          items:
+                            type: string
+                          type: array
+                        group_interval:
+                          type: string
+                        group_wait:
+                          type: string
+                        mute_time_intervals:
+                          items:
+                            type: string
+                          type: array
+                        receiver:
+                          type: string
+                        repeat_interval:
+                          type: string
+                      required:
+                      - receiver
+                      type: object
                     title:
                       example: Always firing
                       maxLength: 190
