--- a/crds/grafana-operator/v5.9.2.grafana.integreatly.org_grafanadashboards.yaml
+++ b/crds/grafana-operator/v5.9.2.grafana.integreatly.org_grafanadashboards.yaml
@@ -44,6 +44,7 @@ spec:
                   key:
                     type: string
                   name:
+                    default: ""
                     type: string
                   optional:
                     type: boolean
@@ -73,6 +74,7 @@ spec:
                         key:
                           type: string
                         name:
+                          default: ""
                           type: string
                         optional:
                           type: boolean
@@ -85,6 +87,7 @@ spec:
                         key:
                           type: string
                         name:
+                          default: ""
                           type: string
                         optional:
                           type: boolean
@@ -108,6 +111,7 @@ spec:
                             key:
                               type: string
                             name:
+                              default: ""
                               type: string
                             optional:
                               type: boolean
@@ -120,6 +124,7 @@ spec:
                             key:
                               type: string
                             name:
+                              default: ""
                               type: string
                             optional:
                               type: boolean
@@ -159,17 +164,22 @@ spec:
                           items:
                             type: string
                           type: array
+                          x-kubernetes-list-type: atomic
                       required:
                       - key
                       - operator
                       type: object
                     type: array
+                    x-kubernetes-list-type: atomic
                   matchLabels:
                     additionalProperties:
                       type: string
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               json:
                 type: string
               jsonnet:
