--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -6,9 +6,9 @@ global:
 
 grafana-operator:
   enabled: false
-  #env:
-  #  - name: RELATED_IMAGE_GRAFANA
-  #    value: "docker.io/grafana/grafana:9.5.19"
+  env:
+    - name: RELATED_IMAGE_GRAFANA
+      value: "docker.io/grafana/grafana:9.5.19"
 
 grafana-main:
   enabled: false
