--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -342,6 +342,13 @@ prometheus-rules:
             for: "15m"
             description: "There are {{ $value }} available postgres (pod {{ $labels.pod }}) connections left, located in namespace {{ $labels.namespace }}"
             expr: (sum by (pod, namespace) (pg_stat_activity_count) / sum by (pod, namespace) (pg_settings_max_connections) > 0.90) or (sum by (pod, namespace) (pg_settings_max_connections) - sum by (pod, namespace) (pg_stat_activity_count) < 20)
+          DB_transactions_per_seconds_below_norm:
+          # There are some transactions from postgres exporter
+          # so we the Transactions per second cant be 0 and we need to
+          # check against a small average number like 0.3
+          expr: sum by (datname, label_app_kubernetes_io_instance) (rate(pg_stat_database_xact_commit{datname!~"^(postgres|template[0-9]*|default|cloudsqladmin|unknown)$"}[5m])) < 0.5
+          for: 2m
+          description: "Transactions per second for database {{ $labels.datname }} in {{ $labels.label_app_kubernetes_io_instance }} service is below norm"
           # Resources
           OOM_killed_pods:
             for: "0m"
