--- a/chart_deps/prometheus/prometheus-rules/values.yaml
+++ b/chart_deps/prometheus/prometheus-rules/values.yaml
@@ -4,16 +4,16 @@ PrometheusAlerts: {}
 #      selector:
 #        prometheus: chicken-coop-1
 #      AbsentMetricCritical:
-#        disabled: true
+#        enabled: false
 #        rules:
 #          chicken_not_ok:
-#            disabled: true
+#            enabled: false
 #            source: "chicken exporter"
 #      CriticalMetric:
 #        rules:
 #          # Deployment
 #          chickens_are_not_ok:
-#            disabled: true
+#            enabled: false
 #            for: "20m"
 #            keep_firing_for: "30m"
 #            description: "More than 10 percent chickens are not ok"
