--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -66,6 +66,13 @@ alertmanager-configs:
               - name: alertname
                 value: "Container_too_many_restarts"
             equal: ['container']
+          - sourceMatch:
+              - name: alertname
+                value: "Postgres_is_down"
+            targetMatch:
+              - name: alertname
+                value: "Postgres_replica_is_down"
+            equal: ['label_app_kubernetes_io_instance']
 
 prometheus-node-exporter:
   enabled: false
@@ -341,6 +348,9 @@ prometheus-rules:
           pg_stat_database_xact_commit{datname!~"^(postgres|template[0-9]*|default|cloudsqladmin|unknown)$"}:
             enabled: true
             source: "prometheus-portgres-exporter"
+          pg_up:
+            enabled: true
+            source: "prometheus-portgres-exporter"
       CriticalMetric:
         enabled: true
         interval: "31s"
@@ -365,6 +375,11 @@ prometheus-rules:
             description: "Volume {{ $labels.persistentvolumeclaim }} located in namespace {{ $labels.namespace }} (on {{ $labels.node }}) has capacity < 5%"
             expr: (kubelet_volume_stats_available_bytes / on(instance,namespace,node,persistentvolumeclaim,service) kubelet_volume_stats_capacity_bytes*100) < 5
           # Postgres
+          Postgres_is_down:
+            enabled: true
+            for: "5m"
+            description: "Postgres {{ $labels.pod }} in {{ $labels.namespace }} is down"
+            expr: pg_up == 0
           Postgres_replica_is_down:
             enabled: true
             for: "5m"
