change summary text in alerts

--- a/chart_deps/prometheus/prometheus-rules/templates/prometheus-alerts.yaml
+++ b/chart_deps/prometheus/prometheus-rules/templates/prometheus-alerts.yaml
@@ -33,7 +33,7 @@ spec:
             summary: |
               Critical metrics is Absent {{ $name }} {{ $absentMetricRuleName }}
             description: |
-              There are no metric {{ $absentMetricRuleName }} from {{ $absentMetricRule.source }} in {{ $name }}.
+              There are no metric {{ $absentMetricRuleName }}{{ $query }} from {{ $absentMetricRule.source }} in {{ $name }}.
               Check the source {{ $absentMetricRule.source }} instance and scrape process
       {{- end }}
       {{- end }}
