--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -66,6 +66,13 @@ alertmanager-configs:
               - name: alertname
                 value: "Container_too_many_restarts"
             equal: ['container']
+          - sourceMatch:
+              - name: alertname
+                value: "Postgres_is_down"
+            targetMatch:
+              - name: alertname
+                value: "Postgres_replica_is_down"
+            equal: ['label_app_kubernetes_io_instance']
 
 prometheus-node-exporter:
   enabled: false
@@ -254,8 +261,8 @@ prometheus-main:
     spec:
       enableAdminAPI: true
       thanos:
-        image: quay.io/thanos/thanos:v0.35.0
-        version: v0.35.0
+        image: quay.io/thanos/thanos:v0.35.1
+        version: v0.35.1
         objectStorageConfig:
           key: objstore.yml
           name: thanos
@@ -329,77 +336,146 @@ prometheus-rules:
       team: sre
       selector:
         prometheus: main
+      AbsentMetricCritical:
+        enabled: true
+        rules:
+          probe_success:
+            enabled: true
+            source: "prometheus-blackbox-exporter"
+          kong_http_requests_total:
+            enabled: true
+            source: "kong exporter"
+          pg_stat_database_xact_commit:
+            query: "{datname!~'^(postgres|template[0-9]*|default|cloudsqladmin|unknown)$'}"
+            enabled: true
+            source: "prometheus-portgres-exporter"
+          pg_up:
+            enabled: true
+            source: "prometheus-portgres-exporter"
       CriticalMetric:
+        enabled: true
         interval: "31s"
         rules:
+          #Kong (nginx)
+          ErrorRateIncreasedFor_5XX:
+            enabled: true
+            expr: sum by (exported_service) (rate(kong_http_requests_total{code=~"5.."}[10m])) / sum by (exported_service) (rate(kong_http_requests_total[10m])) > 0.1
+            for: "10m"
+            description: "KongHQ error rate is high for {{ $labels.exported_service }} service"
+          # Blackbox
+          api:
+            enabled: true
+            expr: probe_success == 0
+            for: "2m"
+            description: "URL {{ $labels.instance }} is down/unreachable"
+            summary: "{{ $labels.instance }} is down"
           # pvc
           PVC_low_capacity:
+            enabled: true
             for: "15m"
             description: "Volume {{ $labels.persistentvolumeclaim }} located in namespace {{ $labels.namespace }} (on {{ $labels.node }}) has capacity < 5%"
             expr: (kubelet_volume_stats_available_bytes / on(instance,namespace,node,persistentvolumeclaim,service) kubelet_volume_stats_capacity_bytes*100) < 5
           # Postgres
+          Postgres_is_down:
+            enabled: true
+            for: "5m"
+            description: "Postgres {{ $labels.pod }} in {{ $labels.namespace }} is down"
+            expr: pg_up == 0
+          Postgres_replica_is_down:
+            enabled: true
+            for: "5m"
+            description: "Postgres replica {{ $labels.label_app_kubernetes_io_instance }} in {{ $labels.namespace }} is down"
+            expr: sum by (label_app_kubernetes_io_instance, namespace) (pg_replication_is_replica) < 1
           Available_postgresql_connections_are_running_out:
+            enabled: true
             for: "15m"
             description: "There are {{ $value }} available postgres (pod {{ $labels.pod }}) connections left, located in namespace {{ $labels.namespace }}"
             expr: (sum by (pod, namespace) (pg_stat_activity_count) / sum by (pod, namespace) (pg_settings_max_connections) > 0.90) or (sum by (pod, namespace) (pg_settings_max_connections) - sum by (pod, namespace) (pg_stat_activity_count) < 20)
+          DB_transactions_per_seconds_below_norm:
+          # There are some transactions from postgres exporter
+          # so we the Transactions per second cant be 0 and we need to
+          # check against a small average number like 0.5
+            enabled: true
+            expr: sum by (datname, label_app_kubernetes_io_instance) (rate(pg_stat_database_xact_commit{datname!~"^(postgres|template[0-9]*|default|cloudsqladmin|unknown)$"}[5m])) < 0.5
+            for: "2m"
+            description: "Transactions per second for database {{ $labels.datname }} in {{ $labels.label_app_kubernetes_io_instance }} service is below norm"
           # Resources
           OOM_killed_pods:
+            enabled: true
             for: "0m"
             description: "Container {{ $labels.exported_container }} in pod {{ $labels.exported_pod }} located in namespace {{ $labels.exported_namespace }} (node {{ $labels.node }}) was killed by OOM killer"
             expr: ((increase(kube_pod_container_status_restarts_total[10m]) > 0) and ignoring (reason) kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}) * on (exported_pod) group_left (node) kube_pod_info > 0
           # Deployment
           Pods_waiting_state:
+            enabled: true
             for: "20m"
             description: "Container {{ $labels.container }} in {{ $labels.pod }} waiting with reason {{ $labels.reason }} for >20 minutes"
             expr: sum by (pod, container, namespace, reason) (kube_pod_container_status_waiting_reason{exported_namespace!="kube-system", reason!="OOMKilled"})>0
           Pods_waiting_state_kube-system:
+            enabled: true
             for: "1h"
             description: "Container {{ $labels.container }} in {{ $labels.pod }} waiting with reason {{ $labels.reason }} for >1h"
             expr: sum by (pod, container, namespace, reason) (kube_pod_container_status_waiting_reason{exported_namespace="kube-system", reason!="OOMKilled"})>0
           Pod_replicas_not_ready:
+            enabled: true
             for: "15m"
             description: "Pods replicas less than specified for '{{ $labels.deployment }}' for > 15m"
             expr: (kube_deployment_spec_replicas * on (deployment) group_left (container) kube_deployment_labels) != (kube_deployment_status_replicas_available * on (deployment) group_left (container) kube_deployment_labels)
           Daemonset_not_ready:
+            enabled: true
             for: "15m"
             description: "daemonset '{{ $labels.daemonset }}' not scheduled in 15m"
             expr: kube_daemonset_status_number_misscheduled > 1
+          Statefulset_not_ready:
+            enabled: true
+            for: "15m"
+            description: "StatefulSet {{ $labels.statefulset }} in namespace {{ $labels.namespace }} has not matched the expected number of replicas for >15 minutes"
+            expr: kube_statefulset_status_replicas_ready != kube_statefulset_status_replicas
           RabbitMQ_High_memory(watermark)_usage:
+            enabled: true
             for: "20m"
             description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} is using >90% of 'Memory high watermark' limit for > 20m"
             expr: sum by (container,pod,namespace) (container_memory_working_set_bytes{container="rabbitmq"}) / on(container,pod,namespace) rabbitmq_detailed_resident_memory_limit_bytes > 0.9
       WarningMetric:
+        enabled: true
         interval: "31s"
         rules:
           # postgres
           Postgres_logical_backup_error:
+            enabled: true
             for: "2h"
             description: "Cronjob {{ $labels.cronjob }} failed"
             expr: ((kube_cronjob_next_schedule_time - on(cronjob, exported_namespace) kube_cronjob_status_last_successful_time)/3600) > 25
           # PVC
           PVC_low_capacity:
+            enabled: true
             for: "1h"
             description: "Volume {{ $labels.persistentvolumeclaim }} located in namespace {{ $labels.namespace }} (on {{ $labels.node }}) has capacity < 10%"
             expr: (kubelet_volume_stats_available_bytes / on(instance,namespace,node,persistentvolumeclaim,service) kubelet_volume_stats_capacity_bytes*100) < 10
           # Resources
           High_postgres_container_cpu_throttling:
+            enabled: true
             for: "1h"
             description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} throttled for >1h with throttle of {{ humanizeDuration $value }}"
             expr: rate(container_cpu_cfs_throttled_seconds_total{container="postgres"}[5m]) > 0.1
           High_cpu_throttling:
+            enabled: true
             for: "1h"
             description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} throttled for >1h with throttle of {{ humanizeDuration $value }}"
             expr: rate(container_cpu_cfs_throttled_seconds_total{container!~"postgres"}[5m]) > 0.2
           High_memory_usage:
+            enabled: true
             for: "30m"
             description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} is using >90% of Memory limit for > 30m"
             expr: sum by (container, pod, namespace) (container_memory_working_set_bytes{namespace!="kube-system"}) / on (container, pod, namespace) kube_pod_container_resource_limits{unit="byte"} > 0.9
           OOM_killed_pods_(on_node):
+            enabled: true
             for: "1m"
             description: "Some container located on node {{ $labels.node }} was killed by OOM killer"
             expr: increase(node_vmstat_oom_kill[10m]) > 0
           # Deployment
           Container_too_many_restarts:
+            enabled: true
             for: "10m"
             keep_firing_for: "12m"
             description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} too many restarts (>10 for 10m)"
