--- a/argocd/Chart.yaml
+++ b/argocd/Chart.yaml
@@ -2,9 +2,9 @@ apiVersion: v2
 name: argocd
 version: 1.0.0
 dependencies:
-  #https://github.com/argoproj/argo-helm/tree/argo-cd-6.7.3/charts/argo-cd
+  #https://github.com/argoproj/argo-helm/tree/argo-cd-7.4.5/charts/argo-cd
   - name: argo-cd
-    version: 6.7.3
+    version: 7.4.5
     repository: https://argoproj.github.io/argo-helm
     condition: argo-cd.enabled
   - name: certificates
@@ -12,3 +12,8 @@ dependencies:
     repository: file://../chart_deps/security/certificates
     alias: certificates
     condition: certificates.enabled
+  - name: redis-operated
+    version: 0.1.0
+    repository: file://../chart_deps/redis/redis-operated
+    alias: redis
+    condition: redis.enabled
