service-monitor enabled by default for stackdriver-exporter

--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -343,6 +343,11 @@ prometheus-postgres-exporter:
 
 prometheus-stackdriver-exporter:
   enabled: false
+  serviceMonitor:
+    enabled: true
+    namespace: prometheus
+    additionalLabels:
+      prometheus: main
 
 prometheus-rules:
   enabled: false
